--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,76 +1,108 @@
 name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
-on: push
+
+on:
+  push:
+    tags:
+      # Publish on any tag starting with a `v`, e.g., v0.1.0
+      - v*
+
 
 jobs:
-  build:
-    name: Build distribution 📦
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v6
-      with:
-        persist-credentials: false
-    - name: Set up Python
-      uses: actions/setup-python@v6
-      with:
-        python-version: "3.x"
-    - name: Install pypa/build
-      run: >-
-        python3 -m
-        pip install
-        build
-        --user
-    - name: Build a binary wheel and a source tarball
-      run: python3 -m build
-    - name: Store the distribution packages
-      uses: actions/upload-artifact@v5
-      with:
-        name: python-package-distributions
-        path: dist/
-
-  publish-to-pypi:
-    name: >-
-      Publish Python 🐍 distribution 📦 to PyPI
-    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-    needs:
-    - build
+  run:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/aptrade  # Replace <package-name> with your PyPI project name
     permissions:
-      id-token: write  # IMPORTANT: mandatory for trusted publishing
-
+      id-token: write
+      contents: read
     steps:
-    - name: Download all the dists
-      uses: actions/download-artifact@v6
-      with:
-        name: python-package-distributions
-        path: dist/
-    - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Checkout
+        uses: actions/checkout@v6
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+      - name: Install Python 3.13
+        run: uv python install 3.13
+      - name: Build
+        run: uv build
+      # Check that basic features work and we didn't miss to include crucial files
+      - name: Smoke test (wheel)
+        run: uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
+      - name: Smoke test (source distribution)
+        run: uv run --isolated --no-project --with dist/*.tar.gz tests/smoke_test.py
+      - name: Publish
+        run: uv publish
+# on: push
 
-  # publish-to-testpypi:
-  #   name: Publish Python 🐍 distribution 📦 to TestPyPI
-  #   needs:
-  #   - build
-  #   runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     name: Build distribution 📦
+#     runs-on: ubuntu-latest
 
-  #   environment:
-  #     name: testpypi
-  #     url: https://test.pypi.org/p/aptrade
+#     steps:
+#     - uses: actions/checkout@v6
+#       with:
+#         persist-credentials: false
+#     - name: Set up Python
+#       uses: actions/setup-python@v6
+#       with:
+#         python-version: "3.x"
+#     - name: Install pypa/build
+#       run: >-
+#         python3 -m
+#         pip install
+#         build
+#         --user
+#     - name: Build a binary wheel and a source tarball
+#       run: python3 -m build
+#     - name: Store the distribution packages
+#       uses: actions/upload-artifact@v5
+#       with:
+#         name: python-package-distributions
+#         path: dist/
 
-  #   permissions:
-  #     id-token: write  # IMPORTANT: mandatory for trusted publishing
+#   publish-to-pypi:
+#     name: >-
+#       Publish Python 🐍 distribution 📦 to PyPI
+#     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+#     needs:
+#     - build
+#     runs-on: ubuntu-latest
+#     environment:
+#       name: pypi
+#       url: https://pypi.org/p/aptrade  # Replace <package-name> with your PyPI project name
+#     permissions:
+#       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
-  #   steps:
-  #   - name: Download all the dists
-  #     uses: actions/download-artifact@v6
-  #     with:
-  #       name: python-package-distributions
-  #       path: dist/
-  #   - name: Publish distribution 📦 to TestPyPI
-  #     uses: pypa/gh-action-pypi-publish@release/v1
-  #     with:
-  #       repository-url: https://test.pypi.org/legacy/
+#     steps:
+#     - name: Download all the dists
+#       uses: actions/download-artifact@v6
+#       with:
+#         name: python-package-distributions
+#         path: dist/
+#     - name: Publish distribution 📦 to PyPI
+#       uses: pypa/gh-action-pypi-publish@release/v1
+
+#   # publish-to-testpypi:
+#   #   name: Publish Python 🐍 distribution 📦 to TestPyPI
+#   #   needs:
+#   #   - build
+#   #   runs-on: ubuntu-latest
+
+#   #   environment:
+#   #     name: testpypi
+#   #     url: https://test.pypi.org/p/aptrade
+
+#   #   permissions:
+#   #     id-token: write  # IMPORTANT: mandatory for trusted publishing
+
+#   #   steps:
+#   #   - name: Download all the dists
+#   #     uses: actions/download-artifact@v6
+#   #     with:
+#   #       name: python-package-distributions
+#   #       path: dist/
+#   #   - name: Publish distribution 📦 to TestPyPI
+#   #     uses: pypa/gh-action-pypi-publish@release/v1
+#   #     with:
+#   #       repository-url: https://test.pypi.org/legacy/
