--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,46 +5,8 @@ description = "Add your description here"
 readme = "docs/README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "alembic>=1.17.2",
-    "backtesting>=0.6.5",
-    "beautifulsoup4>=4.14.2",
-    "bn-lightweight-charts>=1.1.0",
-    "boto3>=1.40.3",
-    "celery>=5.5.3",
-    "click>=8.2.1",
-    "emails>=0.6",
-    "fastapi-crons>=2.0.1",
-    "fastapi[standard]",
-    "ib-async>=2.1.0",
-    "ipykernel>=6.30.1",
-    "jwt>=1.4.0",
-    "massive>=2.0.1",
-    "matplotlib>=3.10.5",
-    "mkdocs>=1.6.1",
-    "mkdocs-material>=9.6.17",
-    "mkdocstrings-python>=1.17.0",
-    "mypy>=1.18.2",
-    "pandas-market-calendars>=5.2.3",
-    "passlib>=1.7.4",
-    "plotly>=6.5.1",
-    "polygon>=1.2.6",
-    "polygon-api-client>=1.15.3",
-    "pre-commit>=4.3.0",
-    "psycopg>=3.2.12",
-    "psycopg2-binary>=2.9.10",
-    "pyarrow>=22.0.0",
-    "pydantic-settings>=2.12.0",
-    "pyjwt>=2.8.0,<3.0.0",
-    "pytest>=8.4.1",
-    "pytest-cov>=6.2.1",
-    "python-dotenv>=1.1.1",
-    "python-telegram-bot>=22.5",
-    "redis>=6.4.0",
-    "sqlmodel>=0.0.24",
-    "statsmodels>=0.14.6",
-    "tenacity>=9.1.2",
-    "tqdm>=4.67.1",
-    "uvicorn>=0.35.0",
+    "numpy>=2.4.2",
+    "typer>=0.23.1",
 ]
 
 [project.scripts]
