--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,37 +1,5 @@
-name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
+# name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
-
-on:
-  push:
-    tags:
-      # Publish on any tag starting with a `v`, e.g., v0.1.0
-      - v*
-
-
-jobs:
-  run:
-    runs-on: ubuntu-latest
-    environment:
-      name: pypi
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-      - name: Install uv
-        uses: astral-sh/setup-uv@v7
-      - name: Install Python 3.13
-        run: uv python install 3.13
-      - name: Build
-        run: uv build
-      # Check that basic features work and we didn't miss to include crucial files
-      - name: Smoke test (wheel)
-        run: uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
-      - name: Smoke test (source distribution)
-        run: uv run --isolated --no-project --with dist/*.tar.gz tests/smoke_test.py
-      - name: Publish
-        run: uv publish
 # on: push
 
 # jobs:
@@ -83,26 +51,26 @@ jobs:
 #     - name: Publish distribution 📦 to PyPI
 #       uses: pypa/gh-action-pypi-publish@release/v1
 
-#   # publish-to-testpypi:
-#   #   name: Publish Python 🐍 distribution 📦 to TestPyPI
-#   #   needs:
-#   #   - build
-#   #   runs-on: ubuntu-latest
+#   publish-to-testpypi:
+#     name: Publish Python 🐍 distribution 📦 to TestPyPI
+#     needs:
+#     - build
+#     runs-on: ubuntu-latest
 
-#   #   environment:
-#   #     name: testpypi
-#   #     url: https://test.pypi.org/p/aptrade
+#     environment:
+#       name: testpypi
+#       url: https://test.pypi.org/p/aptrade
 
-#   #   permissions:
-#   #     id-token: write  # IMPORTANT: mandatory for trusted publishing
+#     permissions:
+#       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
-#   #   steps:
-#   #   - name: Download all the dists
-#   #     uses: actions/download-artifact@v6
-#   #     with:
-#   #       name: python-package-distributions
-#   #       path: dist/
-#   #   - name: Publish distribution 📦 to TestPyPI
-#   #     uses: pypa/gh-action-pypi-publish@release/v1
-#   #     with:
-#   #       repository-url: https://test.pypi.org/legacy/
+#     steps:
+#     - name: Download all the dists
+#       uses: actions/download-artifact@v6
+#       with:
+#         name: python-package-distributions
+#         path: dist/
+#     - name: Publish distribution 📦 to TestPyPI
+#       uses: pypa/gh-action-pypi-publish@release/v1
+#       with:
+#         repository-url: https://test.pypi.org/legacy/
