--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,12 @@
 [project]
 name = "aptrade"
 version = "0.1.0"
-description = "Add your description here"
+description = "Another Python tool for Trading and Backtesting"
 readme = "docs/README.md"
 requires-python = ">=3.12"
+authors = [
+    { name = "vcaldas", email = "caldas.victor@gmail.com" }
+]
 dependencies = [
     "numpy>=2.4.2",
     "typer>=0.23.1",
@@ -13,8 +16,16 @@ dependencies = [
 aptrade = "aptrade:cli.cli"
 
 [build-system]
-requires = ["uv_build>=0.8.4,<0.9.0"]
-build-backend = "uv_build"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.3.3",
+    "ruff>=0.7.1",
+]
+
 
 [tool.uv.build-backend]
 module-name = "aptrade"
