--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,8 @@ dependencies = [
 aptrade = "aptrade:cli.cli"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-
-[tool.uv]
-dev-dependencies = [
-    "pytest>=8.3.3",
-    "ruff>=0.7.1",
-]
-
+requires = ["uv_build>=0.8.4,<0.9.0"]
+build-backend = "uv_build"
 
 [tool.uv.build-backend]
 module-name = "aptrade"
