--- a/.github/workflows/publish-to-pypi copy.yml
+++ b/.github/workflows/publish-to-pypi copy.yml
@@ -1,10 +1,6 @@
 name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
-on:
-  push:
-    tags:
-      # Publish on any tag starting with a `v`, e.g., v1.2.3
-      - v*
+on: push
 
 jobs:
   build:
@@ -15,25 +11,18 @@ jobs:
     - uses: actions/checkout@v6
       with:
         persist-credentials: false
-
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
         python-version: "3.x"
-    - name: Install uv
-      uses: astral-sh/setup-uv@v6
-    - name: Install Python 3.12
-      run: uv python install 3.12
-    - name: Build
-      run: uv build
-    # Check that basic features work and we didn't miss to include crucial files
-    - name: Smoke test (wheel)
-      run: uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
-    - name: Smoke test (source distribution)
-      run: uv run --isolated --no-project --with dist/*.tar.gz tests/smoke_test.py
-#       - name: Publish
-    # - name: Build a binary wheel and a source tarball
-    #   run: python3 -m build
+    - name: Install pypa/build
+      run: >-
+        python3 -m
+        pip install
+        build
+        --user
+    - name: Build a binary wheel and a source tarball
+      run: python3 -m build
     - name: Store the distribution packages
       uses: actions/upload-artifact@v5
       with:
