--- a/.github/workflows/publish-to-pypi copy.yml
+++ b/.github/workflows/publish-to-pypi copy.yml
@@ -1,76 +1,76 @@
-name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
+# name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
-on: push
+# on: push
 
-jobs:
-  build:
-    name: Build distribution 📦
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     name: Build distribution 📦
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v6
-      with:
-        persist-credentials: false
-    - name: Set up Python
-      uses: actions/setup-python@v6
-      with:
-        python-version: "3.x"
-    - name: Install pypa/build
-      run: >-
-        python3 -m
-        pip install
-        build
-        --user
-    - name: Build a binary wheel and a source tarball
-      run: python3 -m build
-    - name: Store the distribution packages
-      uses: actions/upload-artifact@v5
-      with:
-        name: python-package-distributions
-        path: dist/
+#     steps:
+#     - uses: actions/checkout@v6
+#       with:
+#         persist-credentials: false
+#     - name: Set up Python
+#       uses: actions/setup-python@v6
+#       with:
+#         python-version: "3.x"
+#     - name: Install pypa/build
+#       run: >-
+#         python3 -m
+#         pip install
+#         build
+#         --user
+#     - name: Build a binary wheel and a source tarball
+#       run: python3 -m build
+#     - name: Store the distribution packages
+#       uses: actions/upload-artifact@v5
+#       with:
+#         name: python-package-distributions
+#         path: dist/
 
-  publish-to-pypi:
-    name: >-
-      Publish Python 🐍 distribution 📦 to PyPI
-    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-    needs:
-    - build
-    runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/aptrade  # Replace <package-name> with your PyPI project name
-    permissions:
-      id-token: write  # IMPORTANT: mandatory for trusted publishing
+#   publish-to-pypi:
+#     name: >-
+#       Publish Python 🐍 distribution 📦 to PyPI
+#     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+#     needs:
+#     - build
+#     runs-on: ubuntu-latest
+#     environment:
+#       name: pypi
+#       url: https://pypi.org/p/aptrade  # Replace <package-name> with your PyPI project name
+#     permissions:
+#       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
-    steps:
-    - name: Download all the dists
-      uses: actions/download-artifact@v6
-      with:
-        name: python-package-distributions
-        path: dist/
-    - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+#     steps:
+#     - name: Download all the dists
+#       uses: actions/download-artifact@v6
+#       with:
+#         name: python-package-distributions
+#         path: dist/
+#     - name: Publish distribution 📦 to PyPI
+#       uses: pypa/gh-action-pypi-publish@release/v1
 
-  # publish-to-testpypi:
-  #   name: Publish Python 🐍 distribution 📦 to TestPyPI
-  #   needs:
-  #   - build
-  #   runs-on: ubuntu-latest
+#   # publish-to-testpypi:
+#   #   name: Publish Python 🐍 distribution 📦 to TestPyPI
+#   #   needs:
+#   #   - build
+#   #   runs-on: ubuntu-latest
 
-  #   environment:
-  #     name: testpypi
-  #     url: https://test.pypi.org/p/aptrade
+#   #   environment:
+#   #     name: testpypi
+#   #     url: https://test.pypi.org/p/aptrade
 
-  #   permissions:
-  #     id-token: write  # IMPORTANT: mandatory for trusted publishing
+#   #   permissions:
+#   #     id-token: write  # IMPORTANT: mandatory for trusted publishing
 
-  #   steps:
-  #   - name: Download all the dists
-  #     uses: actions/download-artifact@v6
-  #     with:
-  #       name: python-package-distributions
-  #       path: dist/
-  #   - name: Publish distribution 📦 to TestPyPI
-  #     uses: pypa/gh-action-pypi-publish@release/v1
-  #     with:
-  #       repository-url: https://test.pypi.org/legacy/
+#   #   steps:
+#   #   - name: Download all the dists
+#   #     uses: actions/download-artifact@v6
+#   #     with:
+#   #       name: python-package-distributions
+#   #       path: dist/
+#   #   - name: Publish distribution 📦 to TestPyPI
+#   #     uses: pypa/gh-action-pypi-publish@release/v1
+#   #     with:
+#   #       repository-url: https://test.pypi.org/legacy/
