--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -24,6 +24,10 @@ jobs:
       uses: astral-sh/setup-uv@v6
     - name: Install Python 3.12
       run: uv python install 3.12
+    - name: Set version from tag
+      run: |
+        VERSION="${GITHUB_REF_NAME#v}"
+        sed -i "s/^version = .*/version = \"${VERSION}\"/" pyproject.toml
     - name: Build
       run: uv build
     # Check that basic features work and we didn't miss to include crucial files
