--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,19 +8,19 @@ on:
       - main
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: astral-sh/setup-uv@v3
-      - name: Ruff lint
-        run: uv run ruff check .
-      - name: Ruff format
-        run: uv run ruff format --diff .
-      # This isn't a general Python lint, this style is just used in this repository
-      - name: Prettier format
-        run: npx prettier --prose-wrap always --check "**/*.md"
+  # lint:
+  #   name: Lint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: astral-sh/setup-uv@v3
+  #     - name: Ruff lint
+  #       run: uv run ruff check .
+  #     - name: Ruff format
+  #       run: uv run ruff format --diff .
+  #     # This isn't a general Python lint, this style is just used in this repository
+  #     - name: Prettier format
+  #       run: npx prettier --prose-wrap always --check "**/*.md"
 
   test:
     name: Run tests
